[package]
name = "ariadne"
version = "0.3.0"
authors = ["David Michael <davidmichael4d@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "2.33.3"
dirs = "3.0"
ansi_term = "0.12"
sysinfo = "0.18.1"
regex = "1.5.4"
notify = "4.0.17"
tokio = {version = "1.14.0", features = ["full"]}
tokio-stream = "0.1.8"